<resources>
    <string name="app_name">DodoApp</string>
    <string name="text_accueil">Veuillez vous connecter avec vos identifiants.
    Si vous n\'avez pas de compte, créez-en un pour pouvoir vous identifier</string>


    <string name="text_login_email">Email :</string>
    <string name="text_login_password">Mot de passe :</string>
    <string name="text_auth">Veuillez rentrer vos identifiants pour vous connecter</string>

    <string name="btn_seConnecter">Se connecter</string>
    <string name="btn_creerCompte">Créer un compte</string>


    <string name="btn_retour">Retour</string>

    <string name="text_register_email">Email :</string>
    <string name="text_register_password">Mot de passe :</string>
    <string name="text_register_nom">Nom :</string>
    <string name="text_register_prenom">Prenom :</string>
    <string name="text_register_password_confirm">Confirmer</string>

    <string name="text_register_valider">Valider</string>

    <string name="btn_un">1</string>
    <string name="btn_deux">2</string>
    <string name="btn_trois">3</string>
    <string name="btn_plus">+</string>
    <string name="btn_quatre">4</string>
    <string name="btn_cinq">5</string>
    <string name="btn_six">6</string>
    <string name="btn_moins">-</string>
    <string name="btn_sept">7</string>
    <string name="btn_huit">8</string>
    <string name="btn_neuf">9</string>
    <string name="btn_multiplier">*</string>
    <string name="btn_point">.</string>
    <string name="btn_zero">0</string>
    <string name="btn_clear">C</string>
    <string name="btn_diviser">/</string>
    <string name="btn_egal">=</string>

</resources>