<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CalculatriceActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="156dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/btn_zero"
            android:textSize="32sp" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:rowCount="5">

            <Button
                android:id="@+id/buttonOne"
                android:text="@string/btn_un"
                android:textSize="28sp" />

            <Button
                android:id="@+id/buttonTwo"
                android:text="@string/btn_deux"
                android:textSize="28sp" />

            <Button
                android:id="@+id/buttonThree"
                android:text="@string/btn_trois"
                android:textSize="28sp" />

            <Button
                android:id="@+id/buttonPlus"
                android:text="@string/btn_plus"
                android:textSize="28sp" />

            <Button
                android:id="@+id/buttonFour"
                android:text="@string/btn_quatre"
                android:textSize="28sp" />

            <Button
                android:id="@+id/buttonFive"
                android:text="@string/btn_cinq"
                android:textSize="28sp" />

            <Button
                android:id="@+id/buttonSix"
                android:text="@string/btn_six"
                android:textSize="28sp" />

            <Button
                android:id="@+id/buttonMoins"
                android:text="@string/btn_moins"
                android:textSize="28sp" />

            <Button
                android:id="@+id/buttonSeven"
                android:text="@string/btn_sept"
                android:textSize="28sp" />

            <Button
                android:id="@+id/buttonEight"
                android:text="@string/btn_huit"
                android:textSize="28sp" />

            <Button
                android:id="@+id/buttonNine"
                android:text="@string/btn_neuf"
                android:textSize="28sp" />

            <Button
                android:id="@+id/buttonMulti"
                android:text="@string/btn_multiplier"
                android:textSize="28sp" />

            <Button
                android:id="@+id/buttonPoint"
                android:text="@string/btn_point"
                android:textSize="28sp" />

            <Button
                android:id="@+id/buttonZero"
                android:text="@string/btn_zero"
                android:textSize="28sp" />

            <Button
                android:id="@+id/buttonClear"
                android:text="@string/btn_clear"
                android:textSize="28sp" />

            <Button
                android:id="@+id/buttonDiv"
                android:text="@string/btn_diviser"
                android:textSize="28sp" />
        </GridLayout>

        <Button
            android:id="@+id/buttonEquals"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_egal" />

        <TextView
            android:id="@+id/textViewLastOperation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>